# cmake_base

./: CMakeLists.txt  README.md  compila_proj.sh  main.cpp  version.h.in
